--- a/index.html
+++ b/index.html
@@ -3,306 +3,211 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Frontend</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <title>D-Express</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Montserrat&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+    />
   </head>
   <body>
     <div class="container">
-      <div class="heroContainer">
+      <div class="headerHero">
         <header>
           <div class="logo">
-            <img src="images/Logo.png" alt="logo" />
+            <img src="./images/logo.png" alt="Logo" />
           </div>
           <nav>
-            <li>Refill Prescription</li>
-            <li>Buy Medicine</li>
-            <li>Contact a pharmacist</li>
+            <ul>
+              <li>Refill Prescription</li>
+              <li>Buy Medicine</li>
+              <li>Contact a pharmacist</li>
+            </ul>
           </nav>
           <div class="btn">
             <button>Login</button>
           </div>
         </header>
+
         <div class="hero">
-          <div class="textSide">
-            <div class="text1">
-              <h2>We can get your Drug Prescriptions to You</h2>
-              <p>
-                We have all the drugs your doctor prescribed for your health and
-                what’s more, we can get it to you.
-              </p>
-            </div>
-            <div class="text2">
+          <div class="heroText">
+            <h2>We can get your Drug Prescriptions to You</h2>
+            <p>
+              We have all the drugs your doctor prescribed for your health and
+              what’s more, we can get it to you.
+            </p>
+            <div class="heroBtn">
               <button>Ikeja</button>
               <button>VI</button>
               <button>Lekki</button>
               <button>Ajah</button>
             </div>
-            <div class="text3">
-              <div class="input">
-                <input
-                  type="text"
-                  id="text"
-                  name="text"
-                  placeholder="Seach for drugs in our store"
-                />
-              </div>
-              <div class="inputBtn">
-                <button>Find drug</button>
-              </div>
+            <div class="heroForm">
+              <input
+                type="text"
+                name="search"
+                placeholder="&#xF002;   Search for drugs in our store"
+                style="font-family: Arial, FontAwesome"
+              />
+              <button>Find drug</button>
             </div>
           </div>
-          <div class="imageSide">
-            <img src="images/doctor.png" alt="doctor" />
+          <div class="heroImage">
+            <img src="./images/doctor.png" alt="doctor" />
           </div>
         </div>
       </div>
-
-      <!-- --BREAK-- -->
-
-      <div class="affiliations">
-        <h2>Our Affiliations</h2>
-        <div class="lines">
-          <div class="line1">
-            <hr />
-          </div>
-          <div class="line2">
-            <hr />
-          </div>
-        </div>
-        <div class="affiliationLogos">
-          <div class="juhel">
-            <img src="images/juhel.png" alt="juhel" />
-          </div>
-          <div class="emzor">
-            <img src="images/emzor.png" alt="emzor" />
-          </div>
-          <div class="gsk">
-            <img src="images/gsk.png" alt="gsk" />
-          </div>
-        </div>
-      </div>
-
-      <!-- --BREAK -->
-
-      <div class="benefits">
-        <div class="head">
-          <h2>Key Benefits</h2>
-          <div class="lines">
-            <div class="line1">
-              <hr />
+      <div class="innerContainer">
+        <div class="affiliation">
+          <div class="topAffiliate">
+            <h2>Our Affiliations</h2>
+            <div class="lines">
+              <hr class="blue" />
+              <hr class="green" />
             </div>
-            <div class="line2">
-              <hr />
+          </div>
+          <div class="affiliateImages">
+            <div class="juhel">
+              <img src="./images/juhel.png" alt="Juhel" />
+            </div>
+            <div class="emzor">
+              <img src="./images/emzor.png" alt="Emzor" />
+            </div>
+            <div class="gsk">
+              <img src="./images/gsk.png" alt="Gsk" />
             </div>
           </div>
         </div>
-        <div class="benefitFlex">
-          <div class="benefitText">
-            <h4>All your Medicine needs in one place</h4>
-            <div class="prescribe">
-              <div class="bulletText">
-                <div class="bullet">
-                  <img src="images/bullet.png" alt="bullet" />
+
+        <div class="benefits">
+          <div class="topBenefits">
+            <h2>Key Benefits</h2>
+            <div class="lines">
+              <hr class="blue" />
+              <hr class="green" />
+            </div>
+          </div>
+          <div class="medicine">
+            <div class="medicineText">
+              <h5>All your Medicine needs in one place</h5>
+              <div class="option">
+                <div class="optionImage">
+                  <img src="./images/bullet.png" alt="bullet" />
                 </div>
-                <div class="drug">
+                <div class="optionText">
                   <p>Search and find all kind of drugs</p>
                 </div>
               </div>
-              <div class="bulletText">
-                <div class="bullet">
-                  <img src="images/bullet.png" alt="bullet" />
+              <div class="option">
+                <div class="optionImage">
+                  <img src="./images/bullet.png" alt="bullet" />
                 </div>
-                <div class="drug">
-                  <p>We have drugs for soecial case treatments</p>
+                <div class="optionText">
+                  <p>We have drugs for special case treatments</p>
                 </div>
               </div>
-              <div class="bulletText">
-                <div class="bullet">
-                  <img src="images/bullet.png" alt="bullet" />
+              <div class="option">
+                <div class="optionImage">
+                  <img src="./images/bullet.png" alt="bullet" />
                 </div>
-                <div class="drug">
+                <div class="optionText">
                   <p>Get notified when your drug is available</p>
                 </div>
               </div>
+              <button>Get prescription &nbsp &#8811;</button>
             </div>
-            <div class="benefitBtn">
-              <button>Get prescription >></button>
+            <div class="medicineImage">
+              <img src="./images/medicine.png" alt="medicine" />
             </div>
-          </div>
-          <div class="benefitImage">
-            <img src="images/medicine.png" alt="medicine" />
-          </div>
-        </div>
-
-        <div class="doorstepFlex">
-          <div class="benefitText">
-            <h4>Get your drugs at your doorstep</h4>
-            <div class="prescribe door" >
-              <div class="bulletText">
-                <div class="bullet">
-                  <img src="images/bullet.png" alt="bullet" />
-                </div>
-                <div class="drug">
-                  <p>Get straigh delivery to your doorstep</p>
-                </div>
-              </div>
-              <div class="bulletText">
-                <div class="bullet">
-                  <img src="images/bullet.png" alt="bullet" />
-                </div>
-                <div class="drug">
-                  <p>We deliver within 24hrs of request</p>
-                </div>
-              </div>
-              <div class="bulletText">
-                <div class="bullet">
-                  <img src="images/bullet.png" alt="bullet" />
-                </div>
-                <div class="drug">
-                  <p>We guarantee speedily response</p>
-                </div>
-              </div>
-            </div>
-            <div class="benefitBtn">
-              <button>Get prescription >></button>
-            </div>
-          </div>
-          <div class="benefitImagedoor">
-            <img src="images/doorstep.png" alt="medicine" />
-          </div>
-        </div>
-
-        <div class="profileFlex">
-          <div class="benefitText">
-            <h4>Set up your profile and get refill easily</h4>
-            <div class="prescribe">
-              <div class="bulletText">
-                <div class="bullet">
-                  <img src="images/bullet.png" alt="bullet" />
-                </div>
-                <div class="drug">
-                  <p>When you are a member your refill is easier</p>
-                </div>
-              </div>
-              <div class="bulletText">
-                <div class="bullet">
-                  <img src="images/bullet.png" alt="bullet" />
-                </div>
-                <div class="drug">
-                  <p>With one click your medicine is on it’s way</p>
-                </div>
-              </div>
-              <div class="bulletText">
-                <div class="bullet">
-                  <img src="images/bullet.png" alt="bullet" />
-                </div>
-                <div class="drug">
-                  <p>Select a health care specialist</p>
-                </div>
-              </div>
-            </div>
-            <div class="benefitBtn">
-              <button>Get prescription >></button>
-            </div>
-          </div>
-          <div class="benefitImage">
-            <img src="images/profile.png" alt="medicine" />
           </div>
         </div>
       </div>
-
-      <!-- --BREAK -->
-
       <div class="clients">
         <div class="clientImage">
-          <img src="images/client.png" alt="client" />
+          <img src="./images/drug.png" alt="drug" />
         </div>
         <div class="clientText">
           <h2>What Our Clients Say</h2>
-          <div class="allLines">
-            <div class="blueLine">
-              <hr />
-            </div>
-            <div class="greenLine">
-              <hr />
-            </div>
+          <div class="line">
+            <hr class="blue" />
+            <hr class="green" />
           </div>
           <p>
             “The ease of delivery is one that I depended on when I was bedriden
             and couldn’t even walk. Their services is awesome”
           </p>
           <h5>- Gerald Maldiliene</h5>
+          <div class="dots">
+            <img src="./images/dotss.png" alt="dots" />
+          </div>
         </div>
       </div>
-
-      <!-- --BREAK -->
-
       <footer>
         <div class="footContainer">
           <div class="signUp">
-            <div class="signText">
+            <div class="signUpText">
               <h3>Sign up for our Newsletter</h3>
               <p>
                 Get to know updates in the field of medicine and know how often
                 our stores are stocked
               </p>
             </div>
-            <div class="signInput">
-              <label>Your Email</label><br />
-              <div class="text3">
-                <div class="input">
-                  <input
-                    type="text"
-                    id="text"
-                    name="text"
-                    placeholder="example@email.com"
-                  />
-                </div>
-                <div class="inputBtn">
-                  <button>Subscribe</button>
-                </div>
-              </div>
+            <div class="signUpInput">
+              <label for="Newsletter">Your Email</label><br />
+              <input
+                type="search"
+                name="search"
+                placeholder="example@email.com"
+              />
+              <button>
+                Subscribe &nbsp;<span
+                  ><i class="fa-regular fa-paper-plane"></i
+                ></span>
+              </button>
             </div>
           </div>
-
-          <div class="part2">
-            <div class="express">
-              <h3>D-Express</h3>
+          <div class="footContact">
+            <div class="logoSide">
+              <div class="footLogo">
+                <img src="./images/logo.png" alt="Logo" />
+              </div>
               <p>
                 Your favourite online pharmacy store. We offer onsite delivery
                 and your health is our priority
               </p>
             </div>
-            <div class="footerList">
-              <div class="list">
-                <h3>Quick links</h3>
-                <p>Contact us</p>
-                <p>About Us</p>
-                <p>Careers</p>
+            <div class="serviceSide">
+              <div class="quick">
+                <h4>Quick Links</h4>
+                <ul>
+                  <li>Contact Us</li>
+                  <li>About Us</li>
+                  <li>Career</li>
+                </ul>
               </div>
-              <div class="list">
-                <h3>Services</h3>
-                <p>Delivery</p>
-                <p>Purchase</p>
-                <p>Consult Specialist</p>
+              <div class="quick">
+                <h4>Services</h4>
+                <ul>
+                  <li>Delivery</li>
+                  <li>Purchase</li>
+                  <li>Consult Specialist</li>
+                </ul>
               </div>
-              <div class="list">
-                <h3>Social Media</h3>
-                <p>Facebook</p>
-                <p>Twitter</p>
-                <p>Linkedin</p>
+              <div class="quick">
+                <h4>Social Media</h4>
+                <ul>
+                  <li>Facebook</li>
+                  <li>Twitter</li>
+                  <li>Linkedin</li>
+                </ul>
               </div>
             </div>
           </div>
-          <div class="copyright">
-            <p>Designed by sophisticateddev. copyright©</p>
-          </div>
+          <p class="copyright">Designed by sophisticateddev. copyright©</p>
         </div>
       </footer>
     </div>
