--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="headerHero">
         <header>
           <div class="logo">
-            <img src="./images/logo.png" alt="Logo" />
+            <img src="./images/logoo.png" alt="Logo" />
           </div>
           <nav>
             <ul>
@@ -173,7 +173,7 @@
           <div class="footContact">
             <div class="logoSide">
               <div class="footLogo">
-                <img src="./images/logo.png" alt="Logo" />
+                <img src="./images/logoo.png" alt="Logo" />
               </div>
               <p>
                 Your favourite online pharmacy store. We offer onsite delivery
